# security-action

./: .env.example  .gitallowed  .gitignore  CLAUDE.md  Gemfile  README.md  TEST_SECURITY_ALERT.md  action.cjs  action.yml  package-lock.json  package.json  requirements.txt  run.js  socket.yml  test-security-violations.js
.github/: CODEOWNERS  dependabot-dismiss.txt  dependabot.yml  renovate.json
actions/: README.md
assets/: changed.py  cleaner.rb  debug.sh  fickling-audit.py  modelscan-audit.py  npm-audit.py  org.yml  pip-audit.py  reviewdog.sh  scripttagextractor.pkl  scripttagextractor.py  tfsec.jq  tfsec.sh  xmllint.sh
assets/opengrep_rules/client/: android-profile-original.java  android-profile-original.yaml  android-profile-static.yaml  android-resolve-intent.java  android-resolve-intent.yaml  brave-execute-script-ios.swift  brave-execute-script-ios.yaml  brave-execute-script.cpp  brave-execute-script.yaml  brave-isolated-world.yaml  brave-missing-break-in-switch.c  brave-missing-break-in-switch.yaml  browser-dependency-inversion.cc  browser-dependency-inversion.yaml  cast-signed-to-unsigned.yaml  check-vs-dcheck.yaml  check_includes.yaml  chromium-bind-uaf.cpp  chromium-bind-uaf.yaml  chromium-insecure-gurl.cpp  chromium-insecure-gurl.yaml  chromium-uaf.cpp  chromium-uaf.yaml  const_cast.yaml  container-performance-choice.cpp  container-performance-choice.yaml  crash-vs-dump-without-crashing.yaml  cryptography-random-usage.cpp  cryptography-random-usage.yaml  dangling-pointer-trait.cc  dangling-pointer-trait.yaml  get-visible-entry.yaml  glide-library.java  glide-library.yaml  in-process-browser-test.yaml  interesting-api-calls.yaml  java_sources_gni.gni  java_sources_gni.yaml  licensing.txt  licensing.yaml  (+29 more)
scripts/: semgrep-set-policy-mode.py
src/: addMaintainerCustomProperty.js  assigneeRemoved.js  assigneesAfter.js  checkRuleMetadata.js  cleaner.test.js  cleanupComments.js  cleanupSecurityActionMessages.js  cleanupSecurityActionMessages.test.js  commentsNumber.js  deleteSlackMessages.js  deleteSlackMessages.test.js  dependabotConstants.js  dependabotConstants.test.js  dependabotDismiss.js  dependabotNudge.js  getMaintainers.js  hotwords.js  installOpengrep.js  isoWeekId.js  isoWeekId.test.js  kubeGetRepositories.js  matchCodeowners.js  matchCodeowners.test.js  modelscanPostComments.js  modelscanPostComments.test.js  opengrepCompare.js  pullRequestChangedFiles.js  reconcileNudgeMessages.js  reconcileNudgeMessages.test.js  renovateSanityCheck.js  replyToSlackThread.js  semgrepCompare.js  sendSlackMessage.js  (+6 more)
t3sts/pipaudit/: pyproject.toml  requirements-flask.txt
(+323 files in other folders)
