[project]
name = "actiontest"
version = "0.0.1"
description = "Test of pip-audit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi==0.104.1", "pydantic==1.10.13",
    "shortuuid==1.0.11",
    "Jinja2>=3.1.2", "transformers==4.38.0"
]

[project.optional-dependencies]
dev = ["black==23.7.0", "pylint==2.17.5", "polib==1.2.0"]
test = [ "pytest", "pytest-asyncio",  "requests", "httpx", "pytest_httpx", "time-machine", "aioresponses" ]